<resources>
    <string name="app_name">중학교 내신 계산기</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_1">교과활동</string>
    <string name="main_menu_2">출결상황</string>
    <string name="main_menu_3">봉사활동</string>
    <string name="main_menu_4">학교활동</string>
    <string name="result">결과보기</string>
    <string name="title">중학교 내신 계산기</string>
    <string name="title_activity_insert_score">성적입력</string>
    <string name="title_activity_select_subject">과목선택</string>
    <string name="title_activity_select_semester">학년/학기선택</string>
    <string name="title_activity_result">결과</string>
    <string name="title_activity_insert_volunteer_score">봉사활동</string>
    <string name="title_activity_insert_school">학교활동</string>
    <string name="title_activity_insert_attendance">출결사항</string>
    <string name="result_title">내신성적산출</string>
    <string name="result_subject_title">교과활동 총 취득점수</string>
    <string name="grade_1">1학년</string>
    <string name="sum">총계</string>
    <string name="arts">예체능</string>
    <string name="grade_2">2학년</string>
    <string name="grade_3">3학년</string>
    <string name="etc_score_1">출결</string>
    <string name="etc_score_2">봉사활동</string>
    <string name="etc_score_3">학교활동</string>
    <string name="ok">확인</string>
    <string name="school_activity_title">학교활동을 입력하세요.</string>
    <string name="school_activity_desc"><b>교내수상점수</b>는 최대 4점까지 부여\n<b>자치회 임원활동 점수</b>는 최대 2점까지 부여\n기본점수 + 두 점수는 10점까지 부여</string>
    <string name="division">구분</string>
    <string name="score">점수</string>
    <string name="school_activity_score_3">자치회 임원활동</string>
    <string name="school_activity_score_2">교내수상</string>
    <string name="school_activity_score_1">기본점수</string>
    <string name="submit">입력완료</string>
    <string name="volunteer_score_title">학년별로 봉사활동을 입력하세요.</string>
    <string name="grade">학년</string>
    <string name="volunteer_work_time">봉사활동 시간</string>
    <string name="default_zero">0</string>
    <string name="volunteer_score_type_1">만점부여</string>
    <string name="volunteer_score_type_3">60시간 기준</string>
    <string name="volunteer_score_type_2">20시간 기준</string>
    <string name="attendance_title">학년별로 출결상황을 입력하세요.</string>
    <string name="attendance_type_4">무단결과</string>
    <string name="attendance_type_3">무단조퇴</string>
    <string name="attendance_type_2">무단지각</string>
    <string name="attendance_type_1">무단결석</string>
    <string name="select_semester_title">학기별로 이수한 과목을 선택하고 성적을 입력하세요.</string>
    <string name="insertion">입력</string>
    <string name="select_subject_title">를 내신계산에 포함하실 건가요?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="select_subject_desc">과목을 선택하세요.</string>
    <string name="subject_1">국어</string>
    <string name="subject_2">영어</string>
    <string name="subject_3">수학</string>
    <string name="subject_4">사회</string>
    <string name="subject_5">과학</string>
    <string name="subject_6">도덕</string>
    <string name="subject_7">역사</string>
    <string name="subject_8">기술/가정</string>
    <string name="subject_9">체육</string>
    <string name="subject_10">음악</string>
    <string name="subject_11">미술</string>
    <string name="subject_12">선택1</string>
    <string name="subject_13">선택2</string>
    <string name="subject_14">선택3</string>
    <string name="score_title">의 성적을 입력하세요.</string>
    <string name="subject">과목</string>
    <string name="score_type_1">성취도</string>
    <string name="score_type_2">원점수</string>
    <string name="score_type_3">평균</string>
    <string name="score_type_4">표준편차</string>
    <string name="complete_selection">선택완료</string>
    <string name="insert">입력</string>
    <string name="grade_1_1">1학년 1학기</string>
    <string name="grade_1_2">1학년 2학기</string>
    <string name="grade_2_1">2학년 1학기</string>
    <string name="grade_2_2">2학년 2학기</string>
    <string name="grade_3_1">3학년 1학기</string>
    <string name="grade_3_2">3학년 2학기</string>
    <string name="school_activity_default_score">6</string>
    <string name="pref_school_activity_score_1">pref_school_activity_score_1</string>
    <string name="pref_school_activity_score_2">pref_school_activity_score_2</string>
    <string name="alert_invalid_input">입력된 값을 확인해 주세요.</string>
    <string name="pref_volunteer_score_1">pref_volunteer_score_1</string>
    <string name="pref_volunteer_score_2">pref_volunteer_score_2</string>
    <string name="pref_volunteer_score_3">pref_volunteer_score_3</string>
    <string name="pref_attendance_type_1_grade_1">pref_attendance_type_1_grade_1</string>
    <string name="pref_attendance_type_2_grade_1">pref_attendance_type_2_grade_1</string>
    <string name="pref_attendance_type_3_grade_1">pref_attendance_type_3_grade_1</string>
    <string name="pref_attendance_type_4_grade_1">pref_attendance_type_4_grade_1</string>
    <string name="pref_attendance_type_1_grade_2">pref_attendance_type_1_grade_2</string>
    <string name="pref_attendance_type_2_grade_2">pref_attendance_type_2_grade_2</string>
    <string name="pref_attendance_type_3_grade_2">pref_attendance_type_3_grade_2</string>
    <string name="pref_attendance_type_4_grade_2">pref_attendance_type_4_grade_2</string>
    <string name="pref_attendance_type_1_grade_3">pref_attendance_type_1_grade_3</string>
    <string name="pref_attendance_type_2_grade_3">pref_attendance_type_2_grade_3</string>
    <string name="pref_attendance_type_3_grade_3">pref_attendance_type_3_grade_3</string>
    <string name="pref_attendance_type_4_grade_3">pref_attendance_type_4_grade_3</string>
    <string name="pref_volunteer_type">pref_volunteer_type</string>
    <string name="pref_attendance_grade_1">pref_attendance_grade_1</string>
    <string name="pref_attendance_grade_2">pref_attendance_grade_2</string>
    <string name="pref_attendance_grade_3">pref_attendance_grade_3</string>

</resources>
